update Python Report

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-Python/.idea/misc.xml
-Python/.idea/modules.xml
-Python/.idea/Python.iml
-Python/.idea/vcs.xml
-Python/.idea/inspectionProfiles/profiles_settings.xml
-Python/.idea/inspectionProfiles/Project_Default.xml
+Python/.idea
